--- a/index.css
+++ b/index.css
@@ -3,3 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: white;
+}
+
+
+.nav-header {
+    position: absolute;
+    top: 50%;
+    
+}
