--- a/index.css
+++ b/index.css
@@ -6,12 +6,49 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
-
+/*navegador del header*/
 .nav-header {
-    position: absolute;
-    top: 50%;
-    
+    position: relative;
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+/*cuadros de texto del nav*/
+.nav-content {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1200px;
+}
+
+/*Texto del menu*/
+.menu {
+    display: flex;
+    gap: 20px;
+}
+.menu a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+.menu a:hover{
+    color: #00bcd4;
+}
+
+/*Logo*/
+.logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
