--- a/index.css
+++ b/index.css
@@ -6,12 +6,13 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(0, 0, 0);
+    background-color: white;
 }
+
 
 /*navegador del header*/
 .nav-header {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 80px;
     overflow: hidden;
@@ -77,5 +78,5 @@ body {
     transform: translate(-50%, -50%);
     object-fit: contain;
     z-index: 0;
-    opacity: 0.6; ;
+    /*opacity: 0.20;*/ 
 }
